2006-01-06 17:41  bchiara

	* ChangeLog, NEWS, src/capture.c, src/links.c, src/node.c,
	src/node.h, src/protocols.c, src/protocols.h: Completed unified
	traffic stats routines/structures. Updated NEWS with some notes
	work already completed.

2006-01-04 19:50  bchiara

	* ChangeLog, src/pkt_info.h: pkt_info.h now contains declarations
	of basic packet structures

2006-01-04 19:48  bchiara

	* ChangeLog, glade/etherape.glade2, src/capture.c,
	src/conversations.c, src/conversations.h, src/diagram.c,
	src/globals.h, src/links.c, src/links.h, src/main.c, src/names.c,
	src/names.h, src/node.c, src/node.h, src/protocols.c,
	src/protocols.h: Conversation now expire with the corresponding
	link. Protocol stack revision.

2006-01-03 21:27  bchiara

	* ChangeLog, README.help, TODO, html/FAQ.html, src/capture.c,
	src/diagram.c, src/globals.h, src/main.c, src/main.h,
	src/preferences.c, src/preferences.h: cleanups ...

2006-01-03 19:51  bchiara

	* ChangeLog, glade/etherape.glade2, src/capture.c, src/diagram.c,
	src/globals.h, src/ip-cache.c, src/main.c, src/names.c,
	src/preferences.c: fixes bug 1396236 and tidies up preferences
	dialog.

2006-01-03 11:01  bchiara

	* ChangeLog, glade/etherape.glade2, src/datastructs.c,
	src/datastructs.h, src/diagram.c, src/main.c: proto color hashing
	for better performance

2006-01-02 20:44  bchiara

	* ChangeLog, src/datastructs.c, src/datastructs.h, src/diagram.c,
	src/main.c, src/preferences.c: preparing to hash proto-color
	pairings

2006-01-01 19:29  bchiara

	* ChangeLog, src/diagram.c: correcting a silly mistake

2006-01-01 17:05  bchiara

	* src/: diagram.c, diagram.h: small performance changes and
	restructuring

2005-12-31 11:17  bchiara

	* ChangeLog: updated with latest developments

2005-12-31 09:00  bchiara

	* src/diagram.c: fix for 1372245

2005-12-30 16:36  bchiara

	* src/: capture.c, capture.h, diagram.c, eth_resolv.h, globals.h,
	links.c, names.c, names_netbios.c, names_netbios.h, node.c, node.h,